code giao dien hompage 60%

--- a/index.html
+++ b/index.html
@@ -23,10 +23,287 @@
 </head>
 
 <body>
-    <h1 class="text1">Grunt TEST</h1>
-	
-	<script type="text/javascript" src="dest/jsmain.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+    <header>
+        <div class="container-fluid">
+            <div class="header-wrap">
+                <div class="menu">
+                    <div class="hamburger">
+                        <div></div>
+                    </div>
+                    <span>MENU</span>
+                </div>
+                <div class="logo">
+                    <a href="index.html">
+                        <i><img src="img/logo.svg" alt="logo"></i>
+                    </a>
+                </div>
+                <div class="btn">
+                    <div class="btn__login">
+                        <span>Đăng nhập</span>
+                    </div>
+                    <div class="btn__signin">
+                        <span>Đăng Kí</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="homepage">
+        <div class="mainbg">
+            <div class="content">
+                <h1>thực chiến</h1>
+                <p>Để trở thành creative front-end developer</p>
+                <a href="course-detail.html" class="main-btn">Khóa học</a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="intro">
+                <p>The readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it
+                    has a more-or-less normal </p>
+            </div>
+            <div class="online-courses">
+                <h2>khóa học <strong>online</strong> </h2>
+                <div class="online-courses__wrap">
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline1.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline2.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline3.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline4.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline5.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline6.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="line"></div>
+        <div class="container">
+            <div class="offline-courses">
+                <h2>khóa học <strong>offline</strong> </h2>
+                <div class="offline-courses__wrap">
+
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline4.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline5.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course">
+                        <a href="course-detail.html" class="course__img"><img src="img/oline6.jpg" alt=""></a>
+                        <a href="course-detail.html" class="course__name">
+                            <h3>Front-end căn bản</h3>
+                        </a>
+                        <p>One of the best corporate fashion brands in Sydney</p>
+                        <div class="teacher">
+                            <div class="teacher__infor">
+                                <img src="img/member.jpg" alt="teacher">
+                                <span>Trần Nghĩa</span>
+                            </div>
+                            <div class="detail">
+                                <span>Đăng ký</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="special-things">
+            <div class="container">
+                <div class="special-things__wrap">
+                    <div class="title-box">
+                        <h2>Những Điều <br>
+                            <strong class="blue">Đặc Biệt</strong>
+                             Tại CFD</h2>
+                        <img src="img/index1.jpg" alt="special">
+                    </div>
+                    <div class="content-box">
+                            <div class="item">
+                                <h4>Không cam kết đầu ra</h4>
+                                <p>Với CFD thì việc cam kết đầu ra nó sẽ không có ý nghĩa nếu như cả người hướng dẫn và
+                                    người
+                                    học không thật sự tâm huyết và cố gắng. Vì thế, đội ngũ CFD sẽ làm hết sức để giúp các
+                                    thành
+                                    viên tạo ra sản phẩm có giá trị, thay vì cam kết.
+                                </p>
+                            </div>
+                            <div class="item">
+                                <h4>Không chỉ là một lớp học</h4>
+                                <p>CFD không phải một lớp học thuần túy, tất cả thành viên là một team, cùng hỗ trợ, chia sẻ
+                                    và
+                                    giúp đỡ nhau trong suốt quá trình học và sau này, với sự hướng dẫn tận tâm của các thành
+                                    viên đồng sáng lập.
+                                </p>
+                            </div>
+                            <div class="item">
+                                <h4>Không để ai bị bỏ lại phía sau</h4>
+                                <p>Vì chúng ta là một team, những thành viên tiếp thu chậm sẽ được đội ngũ CFD kèm cặp đặc
+                                    biệt,
+                                    cùng sự hỗ trợ từ các thành viên khác. Vì mục tiêu cuối cùng là hoàn thành
+                                    khóa
+                                    học thật tốt.
+                                </p>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="footer-wrap">
+                <div class="footer-top">
+                    <div class="information">
+                        <div class="sologan">
+                            Sáng tạo, tinh tế và phù hợp sẽ khiến <br>
+                            sản phẩm của bạn trở nên khác biệt.
+                        </div>
+                        <address>
+                            <span>
+                                Số 11, Phan Kế Bính, Quận 1, TP. Hồ Chí Minh
+                            </span>
+                            <a href="tel:+84 98 9596 913">(+84) 98 9596 913</a>
+                            <div class="social">
+                                <a href="facebook.com"><i class="icon-facebook icon"></i></a>
+                                <a href="facebook.com"><i class="icon-mail-alt icon"></i></a>
+                                <a href="facebook.com"><i class="icon-skype icon"></i></a>
+                            </div>
+                        </address>
+                    </div>
+                    <nav class="nav">
+                        <ul>
+                            <li> <a href="">Trang Chủ</a> </li>
+                            <li> <a href="">khóa học</a> </li>
+                            <li> <a href=""> thanh toán</a></li>
+                            <li> <a href="">Điều khoản</a> </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer-bot">
+                    <span>2020 Creative Front-End Dev</span>
+                    <span>Được thiết kế và lập trình bởi CFD Team</span>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <script type="text/javascript" src="dest/jsmain.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
