--- a/user-detail.html
+++ b/user-detail.html
@@ -122,25 +122,25 @@
 
                     <div class="content">
                         <div class="tab_content tab_1" id="tab_1">
-                            <form action="https://www.cfdtraining.vn/get-post/account/edit" method="POST">
+                            <form action="" method="">
                                 <label>
                                     <p>Họ và tên<span>*</span></p>
 
-                                    <input type="text" name="title" value="Huỳnh Tiến Tài">
+                                    <input type="text" name="title" >
 
                                 </label>
 
                                 <label>
                                     <p>Số điện thoại<span>*</span></p>
 
-                                    <input type="text" name="phone" value="0969045051">
+                                    <input type="text" name="phone" >
 
                                 </label>
 
                                 <label>
 
                                     <p>Email<span>*</span></p>
-                                    <input value="taiht221@gmail.com" type="text">
+                                    <input  type="text">
 
 
                                 </label>
@@ -159,13 +159,7 @@
 
                                 </label>
 
-                                <label >
-                                    <p>Cảm nhận về CFD</p>
-                                    <textarea name="review" rows="4" cols="50" style="resize: none;"
-                                        placeholder="Cảm nhận về CFD">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis excepturi error nesciunt rem ipsam deleniti nam provid</textarea>
-
-                                </label>
-                                <div class="btn main rect btn-save">LƯU LẠI</div>
+                                <div class="btn__signin">LƯU LẠI</div>
                             </form>
                         </div>
                         <div class="tab_content tab_2" id="tab_2" style="display:none;">
